# file_organizer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/file_organizer/: mod.rs  settings.rs
