[package]
name = "file_organizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["cargo"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
simple_logger = "5.0.0"
chrono = "0.4.41"
colored = "3.0.0"
